# multi-tenants-django

./: docker-compose.yml  hello.py  pyproject.toml
a_core/: settings.py
a_home/: admin.py  models.py  views.py
a_home/migrations/: 0001_initial.py
templates/: home.html
templates/includes/: header.html
